# aloka

./: .gitignore  .~lock.output.xlsx#  LICENCE  README.md  app.py  financial statements (META).xlsx  financial statements (VALE).xlsx  financials.py  github_api.py  income.py  income2.py  output.xlsx  pyproject.toml  requirements.txt  scraper.py  stocks.csv  teste.py
aloka/: app.py  main.py
aloka/core/: atualiza_precos.py  dados.py  precos.py  precos_status.py
data/: acoes.json  acs-mag-prev-cash-fundo-de-investimento-em-cotas-de-fundo-de-investimento-renda-fixa.json  alocacao.json  fiis.json  pgbl.json  real-investor-70-previdencia-fim.json  rendafixa.json  sf2-tropico-cash-fim.json  sul-america-prev-fic-fi-rf-cp.json  verde-am-icatu-prev-fic-fim-prev.json
