[tool.poetry]
name = "yahoo-scraping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yahoo_scraping"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
xlsxwriter = "^3.1.9"
lxml = "^5.1.0"
html5lib = "^1.1"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
